--- a/XAI/Base.lproj/Linkage_iPhone.storyboard
+++ b/XAI/Base.lproj/Linkage_iPhone.storyboard
@@ -149,7 +149,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="XAILinkageInfoAddCellID" rowHeight="50" id="r1z-Sm-fPw" userLabel="light Cell" customClass="XAILinkageInfoAddCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XAILinkageInfoAddCellID" rowHeight="50" id="r1z-Sm-fPw" userLabel="light Cell" customClass="XAILinkageInfoAddCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r1z-Sm-fPw" id="37G-tx-ogB">
@@ -293,7 +293,7 @@
     </scenes>
     <resources>
         <image name="bg.png" width="320" height="568"/>
-        <image name="cell_close.png" width="258" height="46"/>
+        <image name="cell_close.png" width="359" height="65"/>
         <image name="linkage_add_nor.png" width="277" height="39"/>
         <image name="linkage_add_rect.png" width="278" height="40"/>
         <image name="linkage_add_sel.png" width="277" height="39"/>
